--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </audio>
 
     <div class="text" id="textContainer">
-      <h1>Hi Nata!</h1>
+      <h1>Hi Sayaangg!</h1>
       <p id="typingText"></p>
       <p class="muted">- RAFI GANTENG -</p>
     </div>
