--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div class="card">
-    <img src="https://github.com/DzarelDeveloper/Img/blob/main/ulangtahun.jpg?raw=true" alt="birthday" class="birthday" id="birthdayImage" />
+    <img src="https://github.com/DzarelDeveloper/Img/blob/main/ulangtahun.jpg?raw=true" 
+         alt="birthday" 
+         class="birthday" 
+         id="birthdayImage" />
 
     <audio controls id="audioPlayer">
       <source src="hbd.mp3" type="audio/mp3" />
@@ -16,7 +19,7 @@
     </audio>
 
     <div class="text" id="textContainer">
-      <h1>Hi Sayaangg!</h1>
+      <h1>Alloo Dinduss Sayaangg</h1>
       <p id="typingText"></p>
       <p class="muted">- RAFI GANTENG -</p>
     </div>
@@ -25,4 +28,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
